# ITCH-Parser

./: .gitignore  CMakeLists.txt  README.md
dashboard/: ITCH_dashboard.py
include/: decoder.h  file_reader.h  indicators.h  message_types.h  order_book.h  patterns.h  signals.h  trends.h
src/: decoder.cpp  file_reader.cpp  indicators.cpp  main.cpp  order_book.cpp  patterns.cpp  signals.cpp  trends.cpp
